Update style files (fix bugs for scrollbars)

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -143,7 +143,8 @@ body {
                 justify-content: flex-start;
                 align-items: center;
                 height: 65vh;
-                overflow: auto;
+                overflow-y: auto;
+                overflow-x: hidden;              
                 min-height: 10px;
                 padding-top: 10px;
                 padding-left: 0;
